--- a/clinte/src/index.css
+++ b/clinte/src/index.css
@@ -128,6 +128,20 @@ body{
     border: 1px solid #4F4F4F;
     box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.10);
 }
+.overly form .button-container{
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+}
+.overly form .cancel{
+color: #BDBDBD;
+font-family:'Noto Sans', sans-serif;
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+background-color: transparent;
+}
 .home{
     width: 100%;
 }
@@ -207,6 +221,13 @@ body{
         width: 382.868px;
     }
     .overly form{
-
-    }
+        width: 620px;
+        height: 367.205px;
+        flex-shrink: 0;
+        transform: translate(50%, 50%);
+        -webkit-transform: translate(50%, 50%);
+        -moz-transform: translate(50%, 50%);
+        -ms-transform: translate(50%, 50%);
+        -o-transform: translate(50%, 50%);
+}
 }
