Add function to handel overly

--- a/clinte/src/index.css
+++ b/clinte/src/index.css
@@ -70,6 +70,7 @@ body {
   outline: none;
 }
 .overly {
+  display: none;
   z-index: 10;
   width: 100%;
   height: 100vh;
@@ -139,6 +140,9 @@ body {
   font-weight: 500;
   line-height: normal;
   background-color: transparent;
+}
+.disappear {
+  display: block;
 }
 .home {
   width: 100%;
