--- a/clinte/src/index.css
+++ b/clinte/src/index.css
@@ -73,8 +73,8 @@ body {
   display: none;
   z-index: 10;
   width: 100%;
-  height: 100vh;
-  position: absolute;
+  height: 100%;
+  position: fixed;
   top: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.25);
@@ -146,6 +146,10 @@ body {
 }
 .home {
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 .image-item {
   position: relative;
@@ -153,6 +157,7 @@ body {
   height: 306.294px;
   flex-shrink: 0;
   object-fit: cover;
+  margin-bottom: 46px;
 }
 .image-item img {
   width: 100%;
